--- a/src/MongoDBFactory.API/MongoDBFactory.API.csproj
+++ b/src/MongoDBFactory.API/MongoDBFactory.API.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.29.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
 	</ItemGroup>
