Feat: Updating packages versions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,19 @@ services:
 
   mongodbfactory.api:
     image: ${DOCKER_REGISTRY-}mongodbfactoryapi
+    container_name: mongodbfactoryapi
     build:
       context: .
       dockerfile: src/MongoDBFactory.API/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+    ports:
+      - "8080"
+      - "8081"
     depends_on:
       - mongodb
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
